Fix z-index for add container button

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -152,7 +152,7 @@ body {
   left: 0;
   width: 100%;
   height: 100vh;
-  z-index: 9;
+  z-index: 20;
   padding-top: $navbar-height;
   background-color: rgba(0, 0, 0, 0.3);
 
